[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/disasm",
    "crates/injector",
    "crates/search",
    "crates/summary",
    "crates/tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-2-Clause"
version = "0.1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
