[package]
name = "sandblaster-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sandblaster-core = { path = "../core" }
sandblaster-injector = { path = "../injector" }
sandblaster-search = { path = "../search" }

[[bin]]
name = "sifter"
path = "src/main.rs"
