[package]
name = "sandblaster-mobile-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
sandblaster-core = { path = "../core" }
sandblaster-disasm = { path = "../disasm" }
sandblaster-injector = { path = "../injector" }
sandblaster-search = { path = "../search" }
